<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>